--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
   <link rel="stylesheet" href="assets/app.css" />
 
   <style>
-    header h1{
-      text-align:center;
-      width:100%;
-      font-family: "Iansui", system-ui, -apple-system, "PingFang TC", "Noto Sans TC", sans-serif;
-      letter-spacing:.5px;
-      margin:48px 0 6px;
-    }
+ header h1{
+  text-align:center;
+  width:100%;
+  font-family: "Iansui", system-ui, -apple-system, "PingFang TC", "Noto Sans TC", sans-serif;
+  letter-spacing:.5px;
+  margin:14px 0 6px;
+
+  font-size:clamp(36px, 6vw, 52px);
+   text-shadow: 0 2px 0 rgba(255,255,255,.6);
+
+}
+
     header .sub{justify-content:center}
 
     .home-main{max-width:980px;margin:0 auto;padding:26px 16px 40px;}
@@ -204,4 +209,5 @@
 </script>
 </body>
 </html>
+
 
