--- a/calendar.html
+++ b/calendar.html
@@ -246,6 +246,8 @@
 </div>
 
 <script type="module">
+  import { guardSetup } from "./assets/app.js";
+guardSetup();
   import {
     CATS, loadData, saveData, ymd, ymLabel, monthSum,
     pickRewardImage, applyBackground
@@ -671,3 +673,4 @@
 </script>
 </body>
 </html>
+
