--- a/expense.html
+++ b/expense.html
@@ -218,6 +218,9 @@
 </div>
 
 <script type="module">
+  import { guardSetup } from "./assets/app.js";
+guardSetup();
+
   import { CATS, ymd, ymLabel, applyBackground } from "./assets/app.js";
   await applyBackground("planner");
 
