--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
 </main>
 
 <script type="module">
+  import { guardSetup } from "./assets/app.js";
+guardSetup();
+
   import {
     getUI, saveUI, applyBackground, setupBGM,
     loadData, monthSum, computeStreak, ymd, pad
@@ -209,5 +212,6 @@
 </script>
 </body>
 </html>
+
 
 
