--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div class="bg-wrap"></div>
 
 <header>
-  <h1>LDH追星存錢手帳</h1>
+  <h1 id="siteName">LDH追星存錢手帳</h1>
   <div class="sub"><a href="settings.html">素材庫</a></div>
 </header>
 
@@ -212,6 +212,7 @@ guardSetup();
 </script>
 </body>
 </html>
+
 
 
 
