--- a/setup.html
+++ b/setup.html
@@ -48,6 +48,23 @@
       width:fit-content;
     }
     .btnRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px;}
+
+    /* 候選池 UI */
+    .poolBox{border:1px dashed rgba(120,120,120,.35); border-radius:16px; padding:12px; background:rgba(250,249,246,.7); margin-top:12px;}
+    .tabRow{display:flex; gap:8px; flex-wrap:wrap;}
+    .tabBtn{
+      padding:8px 12px; border-radius:999px; border:1px solid var(--line);
+      background:#fff; font-weight:900; cursor:pointer;
+    }
+    .tabBtn.on{background:rgba(180,150,90,.16);}
+    .poolList{max-height:260px; overflow:auto; margin-top:10px; display:flex; flex-direction:column; gap:6px;}
+    .poolItem{
+      display:flex; align-items:center; gap:10px;
+      border:1px solid rgba(0,0,0,.06);
+      background:#fff; border-radius:14px; padding:8px 10px;
+    }
+    .poolItem small{color:var(--muted);}
+    .poolActions{display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; align-items:center; justify-content:space-between;}
   </style>
 </head>
 <body>
@@ -76,8 +93,33 @@
 
         <h2 style="margin:0 0 10px;font-size:15px;">② 存款對象與顏色</h2>
 
-        <div class="row2">
-          <input id="newCat" type="text" placeholder="新增對象（例：EXILE THE SECOND）" style="flex:1 1 240px;">
+        <!-- ✅ 候選池（團體/個人） -->
+        <div class="poolBox">
+          <b>從名單加入（可勾選多個）</b>
+          <div class="hint">切換「團體 / 個人」，搜尋後勾選，按「加入已選」。</div>
+
+          <div class="tabRow" style="margin-top:10px;">
+            <button class="tabBtn on" id="tabGroups">團體</button>
+            <button class="tabBtn" id="tabPeople">個人</button>
+          </div>
+
+          <div class="row2" style="margin-top:10px;">
+            <input id="poolSearch" type="text" placeholder="搜尋…（可輸入羅馬字/漢字/關鍵字）" style="flex:1 1 240px;">
+            <button class="btn" id="poolCheckAll">全選</button>
+            <button class="btn" id="poolUncheckAll">全不選</button>
+          </div>
+
+          <div class="poolList" id="poolList"></div>
+
+          <div class="poolActions">
+            <small class="mini" id="poolCount">已選 0</small>
+            <button class="btn" id="poolAddSelected">＋加入已選</button>
+          </div>
+        </div>
+
+        <!-- 原本的手動新增 -->
+        <div class="row2" style="margin-top:12px;">
+          <input id="newCat" type="text" placeholder="手動新增對象（例：EXILE THE SECOND）" style="flex:1 1 240px;">
           <button class="btn" id="addCat">＋新增</button>
         </div>
 
@@ -115,20 +157,20 @@
     DEFAULT_CATS, getBuiltInBackgrounds,
     getConfig, saveConfig, applyBackground, getCatTheme
   } from "./assets/app.js";
+  import { PRESET_GROUPS, PRESET_PEOPLE } from "./assets/presets.js";
 
   await applyBackground("planner");
 
   const el = (id)=>document.getElementById(id);
 
-  // 初始 config（若已有 config 就載入，讓人可以重新跑 setup）
   const cfg = getConfig() || {
     setupDone: false,
     ownerName: "",
     siteTitle: "",
     cats: DEFAULT_CATS.slice(),
     themeMap: {},
-    backgroundUrl: "",   // 可是 dataURL 或 內建路徑
-    musicDataUrl: "",    // 之後設定頁再做也行
+    backgroundUrl: "",
+    musicDataUrl: "",
   };
 
   el("ownerName").value = cfg.ownerName || "";
@@ -140,7 +182,84 @@
   if (cfg.backgroundUrl && bgs.includes(cfg.backgroundUrl)) el("bgSelect").value = cfg.backgroundUrl;
   else el("bgSelect").value = bgs[0] || "assets/backgrounds/default.jpg";
 
-  // 對象列表
+  // ===== 候選池（團體/個人） =====
+  let poolMode = "groups"; // groups | people
+
+  function getPool(){
+    const q = (el("poolSearch").value || "").trim().toLowerCase();
+    const list = (poolMode === "groups" ? PRESET_GROUPS : PRESET_PEOPLE).slice();
+    if(!q) return list;
+    return list.filter(x => String(x).toLowerCase().includes(q));
+  }
+
+  function renderPool(){
+    const list = getPool();
+    el("poolList").innerHTML = list.map((name, idx)=>`
+      <label class="poolItem">
+        <input type="checkbox" data-name="${escapeHtml(name)}">
+        <div style="display:flex;flex-direction:column;gap:2px;">
+          <b>${escapeHtml(name)}</b>
+          <small>${poolMode === "groups" ? "團體" : "個人"}</small>
+        </div>
+      </label>
+    `).join("");
+
+    updatePoolCount();
+    el("poolList").querySelectorAll("input[type=checkbox]").forEach(cb=>{
+      cb.onchange = updatePoolCount;
+    });
+  }
+
+  function updatePoolCount(){
+    const n = el("poolList").querySelectorAll("input[type=checkbox]:checked").length;
+    el("poolCount").textContent = `已選 ${n}`;
+  }
+
+  el("tabGroups").onclick = ()=>{
+    poolMode = "groups";
+    el("tabGroups").classList.add("on");
+    el("tabPeople").classList.remove("on");
+    el("poolSearch").value = "";
+    renderPool();
+  };
+  el("tabPeople").onclick = ()=>{
+    poolMode = "people";
+    el("tabPeople").classList.add("on");
+    el("tabGroups").classList.remove("on");
+    el("poolSearch").value = "";
+    renderPool();
+  };
+
+  el("poolSearch").oninput = renderPool;
+
+  el("poolCheckAll").onclick = ()=>{
+    el("poolList").querySelectorAll("input[type=checkbox]").forEach(cb=>cb.checked = true);
+    updatePoolCount();
+  };
+  el("poolUncheckAll").onclick = ()=>{
+    el("poolList").querySelectorAll("input[type=checkbox]").forEach(cb=>cb.checked = false);
+    updatePoolCount();
+  };
+
+  el("poolAddSelected").onclick = ()=>{
+    const picked = Array.from(el("poolList").querySelectorAll("input[type=checkbox]:checked"))
+      .map(cb => cb.getAttribute("data-name"))
+      .filter(Boolean);
+
+    if(!picked.length) return;
+
+    let added = 0;
+    for(const name of picked){
+      if(cfg.cats.includes(name)) continue;
+      cfg.cats.push(name);
+      added += 1;
+    }
+
+    renderCats();
+    alert(added ? `已加入 ${added} 個對象！` : "選到的對象都已經存在了～");
+  };
+
+  // ===== 對象列表（已選 + 顏色） =====
   function renderCats(){
     const list = el("catList");
     list.innerHTML = "";
@@ -152,7 +271,7 @@
       div.className = "catItem";
       div.innerHTML = `
         <div class="catHead">
-          <b>${name}</b>
+          <b>${escapeHtml(name)}</b>
           <button class="btn" data-del="${idx}"><span style="color:#b42318">刪除</span></button>
         </div>
 
@@ -176,9 +295,9 @@
         </div>
 
         <div class="previewTag" style="background:${t.bg};color:${t.fg};border:1px solid ${t.border};">
-          預覽：${name}
+          預覽：${escapeHtml(name)}
         </div>
-        <div class="mini">提示：你選的顏色會套到月曆標籤、事件頁膠帶。</div>
+        <div class="mini">提示：顏色會套到月曆標籤、事件頁膠帶。</div>
       `;
       list.appendChild(div);
     });
@@ -208,7 +327,7 @@
     });
   }
 
-  // 新增對象
+  // 手動新增對象
   el("addCat").onclick = ()=>{
     const v = (el("newCat").value || "").trim();
     if(!v) return;
@@ -246,8 +365,6 @@
     cfg.ownerName = (el("ownerName").value || "").trim();
     cfg.siteTitle = (el("siteTitle").value || "").trim();
     cfg.setupDone = true;
-
-    // themeMap 若是 #hex，保留即可（app.js 會直接用）
     saveConfig(cfg);
     location.href = "index.html";
   };
@@ -269,18 +386,26 @@
     el("bgUpload").value = "";
   };
 
-  // 將 rgba / hex 轉成 color input 可用 hex（簡化：若原本是 rgba 就給預設）
   function toHex(x){
     if(!x) return "";
     const s = String(x).trim();
     if(s.startsWith("#")) return s.length===4 ? expand3(s) : s;
-    // 其他格式（rgba）就不轉，回傳空，讓 UI 用預設色
     return "";
   }
   function expand3(h){
     return "#" + h[1]+h[1]+h[2]+h[2]+h[3]+h[3];
   }
+  function escapeHtml(s){
+    return String(s||"")
+      .replaceAll("&","&amp;")
+      .replaceAll("<","&lt;")
+      .replaceAll(">","&gt;")
+      .replaceAll('"',"&quot;")
+      .replaceAll("'","&#39;");
+  }
 
+  // init
+  renderPool();
   renderCats();
 </script>
 </body>
