--- a/settings.html
+++ b/settings.html
@@ -76,7 +76,7 @@
     <div class="card2">
       <h2 style="margin:0 0 10px;font-size:15px;">手帳名稱</h2>
       <label>你的名字</label>
-      <input id="ownerName" type="text" placeholder="例：小美"/>
+      <input id="ownerName" type="text" placeholder="例：小美(也可以不填)"/>
       <label style="margin-top:10px;">自訂手帳名稱（可留空）</label>
       <input id="siteTitle" type="text" placeholder="例：小美的LDH追星存錢手帳"/>
       <div class="hint">留空會用「你的名字＋的LDH追星存錢手帳」。</div>
