--- a/setup.html
+++ b/setup.html
@@ -7,71 +7,38 @@
   <link rel="stylesheet" href="assets/app.css"/>
   <style>
     .wrap{max-width:920px;margin:0 auto;padding:20px 16px 44px;}
-    .paper{
-      border:1px solid var(--line);
-      border-radius:22px;
-      background:rgba(255,255,255,.92);
-      box-shadow:0 18px 34px rgba(0,0,0,.10), 0 2px 0 rgba(0,0,0,.03);
-      padding:18px;
-      position:relative;
-      overflow:hidden;
-    }
-    .paper::after{
-      content:"";
-      position:absolute; top:-10px; right:18px;
-      width:110px; height:34px;
-      background:rgba(180,150,90,.25);
-      border:1px solid rgba(180,150,90,.30);
-      border-radius:10px;
-      transform:rotate(7deg);
-      box-shadow:0 10px 18px rgba(0,0,0,.10);
-      -webkit-mask-image: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 12%, rgba(0,0,0,1) 88%, rgba(0,0,0,0) 100%);
-      mask-image: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 12%, rgba(0,0,0,1) 88%, rgba(0,0,0,0) 100%);
-      opacity:.95;
-      pointer-events:none;
-    }
+    .paper{border:1px solid var(--line);border-radius:22px;background:rgba(255,255,255,.92);box-shadow:0 18px 34px rgba(0,0,0,.10), 0 2px 0 rgba(0,0,0,.03);padding:18px;position:relative;overflow:hidden;}
+    .paper::after{content:"";position:absolute;top:-10px;right:18px;width:110px;height:34px;background:rgba(180,150,90,.25);border:1px solid rgba(180,150,90,.30);border-radius:10px;transform:rotate(7deg);box-shadow:0 10px 18px rgba(0,0,0,.10);-webkit-mask-image:linear-gradient(90deg,rgba(0,0,0,0) 0%,rgba(0,0,0,1) 12%,rgba(0,0,0,1) 88%,rgba(0,0,0,0) 100%);mask-image:linear-gradient(90deg,rgba(0,0,0,0) 0%,rgba(0,0,0,1) 12%,rgba(0,0,0,1) 88%,rgba(0,0,0,0) 100%);opacity:.95;pointer-events:none;}
     h1{margin:0 0 10px;font-size:20px;}
     .hint{color:var(--muted);font-size:12px;margin-top:6px;}
     .grid{display:grid;grid-template-columns:1fr;gap:14px;}
-    @media(min-width:900px){.grid{grid-template-columns: 1.2fr .8fr;}}
+    @media(min-width:900px){.grid{grid-template-columns:1.2fr .8fr;}}
     .card2{border:1px solid var(--line);border-radius:18px;background:#fff;padding:14px;}
     .row2{display:flex;gap:10px;flex-wrap:wrap;align-items:center;}
     .catList{display:flex;flex-direction:column;gap:10px;margin-top:10px;}
     .catItem{border:1px solid var(--line);border-radius:16px;background:rgba(250,249,246,.92);padding:12px;}
     .catHead{display:flex;justify-content:space-between;gap:10px;align-items:center;}
     .mini{font-size:12px;color:var(--muted);}
-    .previewTag{
-      display:inline-flex;align-items:center;gap:8px;
-      padding:8px 12px;border-radius:999px;border:1px solid transparent;
-      font-weight:900;font-size:12px;
-      margin-top:10px;
-      width:fit-content;
-    }
+    .previewTag{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:999px;border:1px solid transparent;font-weight:900;font-size:12px;margin-top:10px;width:fit-content;}
     .btnRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px;}
 
-    /* 候選池 UI */
-    .poolBox{border:1px dashed rgba(120,120,120,.35); border-radius:16px; padding:12px; background:rgba(250,249,246,.7); margin-top:12px;}
-    .tabRow{display:flex; gap:8px; flex-wrap:wrap;}
-    .tabBtn{
-      padding:8px 12px; border-radius:999px; border:1px solid var(--line);
-      background:#fff; font-weight:900; cursor:pointer;
-    }
+    .poolBox{border:1px dashed rgba(120,120,120,.35);border-radius:16px;padding:12px;background:rgba(250,249,246,.7);margin-top:12px;}
+    .tabRow{display:flex;gap:8px;flex-wrap:wrap;}
+    .tabBtn{padding:8px 12px;border-radius:999px;border:1px solid var(--line);background:#fff;font-weight:900;cursor:pointer;}
     .tabBtn.on{background:rgba(180,150,90,.16);}
-    .poolList{max-height:260px; overflow:auto; margin-top:10px; display:flex; flex-direction:column; gap:6px;}
-    .poolItem{
-      display:flex; align-items:center; gap:10px;
-      border:1px solid rgba(0,0,0,.06);
-      background:#fff; border-radius:14px; padding:8px 10px;
-    }
+    .poolList{max-height:260px;overflow:auto;margin-top:10px;display:flex;flex-direction:column;gap:6px;}
+    .poolItem{display:flex;align-items:center;gap:10px;border:1px solid rgba(0,0,0,.06);background:#fff;border-radius:14px;padding:8px 10px;}
     .poolItem small{color:var(--muted);}
-    .poolActions{display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; align-items:center; justify-content:space-between;}
+    .poolActions{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px;align-items:center;justify-content:space-between;}
+    .modePill{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-top:10px;}
+    .pill{display:inline-flex;align-items:center;gap:6px;border:1px solid var(--line);background:#fff;border-radius:999px;padding:6px 10px;font-weight:900;font-size:12px;}
   </style>
 </head>
 <body>
   <div class="bg-wrap"></div>
 
 <header>
-  <h1 id="title">首次設定</h1>
+  <h1>首次設定</h1>
   <div class="sub">只會在第一次使用前跳出；之後可在「設定」更改。</div>
 </header>
 
@@ -93,18 +60,36 @@
 
         <h2 style="margin:0 0 10px;font-size:15px;">② 存款對象與顏色</h2>
 
-        <!-- ✅ 候選池（團體/個人） -->
         <div class="poolBox">
           <b>從名單加入（可勾選多個）</b>
-          <div class="hint">切換「團體 / 個人」，搜尋後勾選，按「加入已選」。</div>
+          <div class="hint">切換「團體 / 個人」，再選擇顯示方式（完整/簡稱；英文/漢字）。</div>
 
           <div class="tabRow" style="margin-top:10px;">
             <button class="tabBtn on" id="tabGroups">團體</button>
             <button class="tabBtn" id="tabPeople">個人</button>
           </div>
 
+          <!-- 顯示方式切換 -->
+          <div class="modePill" id="modeWrap">
+            <label class="pill" id="groupModePill">
+              團體顯示：
+              <select id="groupNameMode">
+                <option value="full">完整名</option>
+                <option value="short">簡稱（若有）</option>
+              </select>
+            </label>
+
+            <label class="pill" id="peopleModePill" style="display:none;">
+              個人顯示：
+              <select id="peopleNameMode">
+                <option value="roman">英文字名</option>
+                <option value="kanji">漢字名（若有）</option>
+              </select>
+            </label>
+          </div>
+
           <div class="row2" style="margin-top:10px;">
-            <input id="poolSearch" type="text" placeholder="搜尋…（可輸入羅馬字/漢字/關鍵字）" style="flex:1 1 240px;">
+            <input id="poolSearch" type="text" placeholder="搜尋…" style="flex:1 1 240px;">
             <button class="btn" id="poolCheckAll">全選</button>
             <button class="btn" id="poolUncheckAll">全不選</button>
           </div>
@@ -117,35 +102,29 @@
           </div>
         </div>
 
-        <!-- 原本的手動新增 -->
         <div class="row2" style="margin-top:12px;">
-          <input id="newCat" type="text" placeholder="手動新增對象（例：EXILE THE SECOND）" style="flex:1 1 240px;">
+          <input id="newCat" type="text" placeholder="手動新增對象" style="flex:1 1 240px;">
           <button class="btn" id="addCat">＋新增</button>
         </div>
 
         <div class="catList" id="catList"></div>
-        <div class="hint">顏色會套用到：月曆的對象標籤、事件頁膠帶與標籤。</div>
+        <div class="hint">顏色會套用到：月曆標籤、事件頁膠帶與標籤。</div>
       </div>
 
       <div class="card2">
         <h2 style="margin:0 0 10px;font-size:15px;">③ 初始背景</h2>
         <label>選擇背景</label>
         <select id="bgSelect"></select>
-        <div class="hint">你可以提供同擔「固定初始背景」：放在 repo 的 <code>assets/backgrounds/default.jpg</code>。</div>
 
-        <label style="margin-top:10px;">或上傳自己的背景（之後也能改）</label>
+        <label style="margin-top:10px;">或上傳自己的背景</label>
         <input id="bgUpload" type="file" accept="image/*"/>
-
-        <div class="hint">上傳會存進瀏覽器（localStorage）。如果清除瀏覽資料，背景也會消失（可再上傳）。</div>
+        <div class="hint">上傳會存進瀏覽器（localStorage）。清除瀏覽資料會消失。</div>
 
         <hr style="border:none;border-top:1px solid var(--line);margin:14px 0;">
-
-        <h2 style="margin:0 0 10px;font-size:15px;">完成</h2>
         <div class="btnRow">
           <button class="btn primary" id="save">✅ 儲存並開始使用</button>
           <button class="btn" id="reset">重設為預設值</button>
         </div>
-        <div class="hint">儲存後會回到首頁。</div>
       </div>
 
     </div>
@@ -160,7 +139,6 @@
   import { PRESET_GROUPS, PRESET_PEOPLE } from "./assets/presets.js";
 
   await applyBackground("planner");
-
   const el = (id)=>document.getElementById(id);
 
   const cfg = getConfig() || {
@@ -176,30 +154,53 @@
   el("ownerName").value = cfg.ownerName || "";
   el("siteTitle").value = cfg.siteTitle || "";
 
-  // 背景選單
+  // 背景
   const bgs = getBuiltInBackgrounds().filter(Boolean);
   el("bgSelect").innerHTML = bgs.map(u=>`<option value="${u}">${u}</option>`).join("");
-  if (cfg.backgroundUrl && bgs.includes(cfg.backgroundUrl)) el("bgSelect").value = cfg.backgroundUrl;
-  else el("bgSelect").value = bgs[0] || "assets/backgrounds/default.jpg";
+  el("bgSelect").value = (cfg.backgroundUrl && bgs.includes(cfg.backgroundUrl)) ? cfg.backgroundUrl : (bgs[0] || "assets/backgrounds/default.jpg");
 
-  // ===== 候選池（團體/個人） =====
+  // ===== 候選池 =====
   let poolMode = "groups"; // groups | people
 
-  function getPool(){
+  function getDisplayNameFromGroup(g){
+    const mode = el("groupNameMode").value; // full | short
+    if(mode === "short" && g.short) return g.short;
+    return g.full;
+  }
+  function getDisplayNameFromPerson(p){
+    const mode = el("peopleNameMode").value; // roman | kanji
+    if(mode === "kanji" && p.kanji) return p.kanji;
+    return p.roman;
+  }
+
+  function poolItems(){
     const q = (el("poolSearch").value || "").trim().toLowerCase();
-    const list = (poolMode === "groups" ? PRESET_GROUPS : PRESET_PEOPLE).slice();
+    let list = [];
+    if(poolMode === "groups"){
+      list = PRESET_GROUPS.map(g=>({
+        key: g.full, // 穩定 key（避免切換顯示方式造成勾選混亂）
+        text: getDisplayNameFromGroup(g),
+        meta: g.short ? `可用簡稱：${g.short}` : "團體",
+      }));
+    }else{
+      list = PRESET_PEOPLE.map(p=>({
+        key: p.roman + (p.kanji ? `|${p.kanji}` : ""),
+        text: getDisplayNameFromPerson(p),
+        meta: p.kanji ? `可切換：${p.roman} / ${p.kanji}` : "個人",
+      }));
+    }
     if(!q) return list;
-    return list.filter(x => String(x).toLowerCase().includes(q));
+    return list.filter(x => (x.text + " " + x.meta).toLowerCase().includes(q));
   }
 
   function renderPool(){
-    const list = getPool();
-    el("poolList").innerHTML = list.map((name, idx)=>`
+    const list = poolItems();
+    el("poolList").innerHTML = list.map(x=>`
       <label class="poolItem">
-        <input type="checkbox" data-name="${escapeHtml(name)}">
+        <input type="checkbox" data-key="${escapeHtml(x.key)}" data-text="${escapeHtml(x.text)}">
         <div style="display:flex;flex-direction:column;gap:2px;">
-          <b>${escapeHtml(name)}</b>
-          <small>${poolMode === "groups" ? "團體" : "個人"}</small>
+          <b>${escapeHtml(x.text)}</b>
+          <small>${escapeHtml(x.meta)}</small>
         </div>
       </label>
     `).join("");
@@ -215,22 +216,26 @@
     el("poolCount").textContent = `已選 ${n}`;
   }
 
-  el("tabGroups").onclick = ()=>{
-    poolMode = "groups";
-    el("tabGroups").classList.add("on");
-    el("tabPeople").classList.remove("on");
+  function setMode(mode){
+    poolMode = mode;
+    if(mode === "groups"){
+      el("tabGroups").classList.add("on"); el("tabPeople").classList.remove("on");
+      el("groupModePill").style.display = "";
+      el("peopleModePill").style.display = "none";
+    }else{
+      el("tabPeople").classList.add("on"); el("tabGroups").classList.remove("on");
+      el("groupModePill").style.display = "none";
+      el("peopleModePill").style.display = "";
+    }
     el("poolSearch").value = "";
     renderPool();
-  };
-  el("tabPeople").onclick = ()=>{
-    poolMode = "people";
-    el("tabPeople").classList.add("on");
-    el("tabGroups").classList.remove("on");
-    el("poolSearch").value = "";
-    renderPool();
-  };
+  }
 
+  el("tabGroups").onclick = ()=>setMode("groups");
+  el("tabPeople").onclick = ()=>setMode("people");
   el("poolSearch").oninput = renderPool;
+  el("groupNameMode").onchange = renderPool;
+  el("peopleNameMode").onchange = renderPool;
 
   el("poolCheckAll").onclick = ()=>{
     el("poolList").querySelectorAll("input[type=checkbox]").forEach(cb=>cb.checked = true);
@@ -243,7 +248,7 @@
 
   el("poolAddSelected").onclick = ()=>{
     const picked = Array.from(el("poolList").querySelectorAll("input[type=checkbox]:checked"))
-      .map(cb => cb.getAttribute("data-name"))
+      .map(cb => cb.getAttribute("data-text"))
       .filter(Boolean);
 
     if(!picked.length) return;
@@ -254,12 +259,11 @@
       cfg.cats.push(name);
       added += 1;
     }
-
     renderCats();
     alert(added ? `已加入 ${added} 個對象！` : "選到的對象都已經存在了～");
   };
 
-  // ===== 對象列表（已選 + 顏色） =====
+  // ===== 已選對象＋顏色 =====
   function renderCats(){
     const list = el("catList");
     list.innerHTML = "";
@@ -297,12 +301,10 @@
         <div class="previewTag" style="background:${t.bg};color:${t.fg};border:1px solid ${t.border};">
           預覽：${escapeHtml(name)}
         </div>
-        <div class="mini">提示：顏色會套到月曆標籤、事件頁膠帶。</div>
       `;
       list.appendChild(div);
     });
 
-    // 刪除
     list.querySelectorAll("[data-del]").forEach(btn=>{
       btn.onclick = ()=>{
         const i = Number(btn.getAttribute("data-del"));
@@ -314,7 +316,6 @@
       };
     });
 
-    // 改顏色
     list.querySelectorAll("input[type=color]").forEach(inp=>{
       inp.oninput = ()=>{
         const i = Number(inp.getAttribute("data-i"));
@@ -327,20 +328,17 @@
     });
   }
 
-  // 手動新增對象
+  // 手動新增
   el("addCat").onclick = ()=>{
     const v = (el("newCat").value || "").trim();
     if(!v) return;
-    if(cfg.cats.includes(v)){
-      alert("這個對象已存在！");
-      return;
-    }
+    if(cfg.cats.includes(v)) return alert("這個對象已存在！");
     cfg.cats.push(v);
     el("newCat").value = "";
     renderCats();
   };
 
-  // 背景上傳（存 dataURL）
+  // 背景
   el("bgUpload").onchange = async (e)=>{
     const f = (e.target.files || [])[0];
     if(!f) return;
@@ -353,8 +351,6 @@
     await applyBackground("planner");
     alert("已上傳背景！記得按『儲存並開始使用』");
   };
-
-  // 背景選單：用內建路徑
   el("bgSelect").onchange = async ()=>{
     cfg.backgroundUrl = el("bgSelect").value;
     await applyBackground("planner");
@@ -392,9 +388,7 @@
     if(s.startsWith("#")) return s.length===4 ? expand3(s) : s;
     return "";
   }
-  function expand3(h){
-    return "#" + h[1]+h[1]+h[2]+h[2]+h[3]+h[3];
-  }
+  function expand3(h){ return "#" + h[1]+h[1]+h[2]+h[2]+h[3]+h[3]; }
   function escapeHtml(s){
     return String(s||"")
       .replaceAll("&","&amp;")
@@ -405,7 +399,7 @@
   }
 
   // init
-  renderPool();
+  setMode("groups");
   renderCats();
 </script>
 </body>
